# Tournament

./: Cargo.toml
src/: colors.rs  individual.rs  main.rs  state.rs
src/gui/: mod.rs
src/simulation/: individual.rs  mod.rs  parameters.rs  state.rs
