[package]
name = "tournament2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.1"
field = { git = "https://github.com/0-Kirby-0/Field" }
rand = "0.8.5"
rayon = "1.10.0"
strum = "0.26.3"
strum_macros = "0.26.4"
